@@ -1,3 +1,9 @@
+2008-10-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Update to Geany API 100 - use p_ui->add_document_sensitive().
+
+
 2008-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/spellcheck.c:
